# model-scout

./: .gitignore  README.md  model_configs.json  pyproject.toml
model_scout/: aggregator.py  cli.py  config.py  encoding.py  main.py  metrics.py  model_configs.json  models.py  report.py  run_single.py  runner.py
model_scout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
model_scout/tests/: test_full_pipeline.py
model_scout/utils/: model_config_loader.py  progress.py
