[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-scout"
version = "0.1.0"
description = "Automatic model benchmarking for sequence-to-property prediction"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Juan Irizarry-Cole", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[project.optional-dependencies]
boost = ["xgboost>=2.0", "lightgbm>=4.0"]
bio = ["torch>=2.2", "esm>=2.0"]

[project.scripts]
model-scout = "model_scout.main:cli_entry"

[project.urls]
Homepage = "https://github.com/icyjayd/model-scout"
Issues = "https://github.com/icyjayd/model-scout/issues"
